tests/sksl/errors/ArrayOfVoid.glsl
### Compilation failed:

error: 3: type 'void' not allowed in this context
error: 4: type 'void' not allowed in this context
error: 5: type 'void' not allowed in this context
error: 7: type 'void' not allowed in this context
error: 8: type 'void' not allowed in this context
error: 9: type 'void' not allowed in this context
error: 10: type 'void' not allowed in this context
error: 11: type 'void' not allowed in this context
8 errors
